--- a/.github/workflows/main_ineuronscrapper.yml
+++ b/.github/workflows/main_ineuronscrapper.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-            node-version: 16
+            node-version: '16'
 
       - name: Set up Python version
         uses: actions/setup-python@v1
